--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,32 @@
 #app {
-  background: blue;
+  .task-list {
+    padding-left: 0;
+    width: 500px;
+  }
+  .task {
+    overflow: hidden;
+    list-style: none;
+    margin: 0 0 10px;
+    border: 1px solid #ccc;
+    .task-name {
+      float: left;
+      width: 380px;
+      border: none;
+      &.completed {
+        color: green;
+      }
+      &.incompleted {
+        color: red;
+      }
+    }
+  }
+  .task-btn {
+    float: right;
+    width: 55px;
+    padding: 2px;
+    text-align: center;
+  }
+  .hidden {
+    display: none;
+  }
 }
